--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ opt-level = 3
 [dependencies]
 macroquad = "0.3.16"
 instant = "0.1"
+legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen", "codegen"] }
+
